--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Hello world</title>
     </head>
     <body>
-        <h1>Hello world</h1>
+        <a href="furnish.html">博文1</a>
     </body>
 </html>
